OpenSourceFieldlinguistics/FieldDB#1143 Edits are now only registered on input box blur (should allow for smoother performance); related: added invisible input box that now catches the focus on arrow key press; also, arrow key functionality is activated on page load (no longer need to click in any input box to be able to arrow-key up/down).

--- a/angular_client/modules/spreadsheet/css/main.css
+++ b/angular_client/modules/spreadsheet/css/main.css
@@ -305,6 +305,12 @@ a.delete_button {
 	margin: 15px;
 }
 
+.focus_box_div {
+	width: 0;
+	height: 0;
+	overflow: hidden;
+}
+
 .selectedRow {
 	background-color: #6D8CA0;
 	border: 2px solid;
